syntax = "proto3";

package fdition;

service FditionService {
  rpc InitBasic(InitBasicRequest) returns (InitBasicResponse) {} // 최초 등록 기본 정보
  rpc InitStatus(InputStatusRequest) returns (InputStatusResponse) {}
}

message InputStatusResponse {
  int32 status          = 1;
  string message        = 2;
  repeated string error = 3;
}


message InputStatusRequest {
  string nodeId                 = 1;
  string type                   = 2;
  string command                = 3;
  repeated StatusPC pc          = 4;
  repeated StatusSW sw          = 5;
  repeated StatusCAMERA camera  = 6;
}

message StatusGIMBAL {
  string ip     = 1;
  string preset = 2;
  string speed  = 3;
  string pan    = 4;
  string tilt   = 5;
  string roll   = 6;
}

message StatusCAMERA {
  string id                       = 1;
  string ip                       = 2;
  string subnet_mask              = 3;
  string gateway_addr             = 4;
  string model                    = 5;
  string fw                       = 6;
  string status                   = 7;
  string system_frequency         = 8;
  message VIDEO {
    string Codec                  = 1;
    string VideoFormatMain        = 2;
    string VideoBitrateMain       = 3;
  }
  VIDEO video                     = 9;
  message EXPOSURE {
    string WhiteBalance           = 1;
    string Contrast               = 2;
    string Saturation             = 3;
    string Hue                    = 4;
    string ColorTemperature       = 5;
    string CMOSOffsetCorrectLevel = 6;
    string AdjustAB               = 7;
    string AdjustGM               = 8;
  }
  EXPOSURE exposure               = 10;
  message COLOR {
    string Aperture               = 1;
    string ShutterSpeed           = 2;
    string ISO                    = 3;
  }
  COLOR color                     = 11;
  message LENS {
    string ManualFocusPosition    = 1;
    string ZoomPosition           = 2;
    string FocusMode              = 3;
    string LensPower              = 4;
  }
  LENS lens                       = 12;
  message OTHERS {
    string AutoFocusPoint         = 1;
    string ExposureMode           = 2;
    string AeArea                 = 3;
    string ExposureCompensation   = 4;
    string ImageStabilizationMode = 5;
    string Sharpness              = 6;
    string NoiseReduction         = 7;
    string LuminanceLevel         = 8;
  }
  OTHERS others                   = 13;
}

message StatusSW {
  string ip     = 1;
  string name   = 2;
  string status = 3;
}

message StatusPC {
  string mac                = 1;
  string ip                 = 2;
  message USAGE {
    string cpu              = 1;
    string mem              = 2;
    string gpu              = 3;
  }
  USAGE usage               = 3;
  message STORAGE {
    string partition        = 1;
    string total            = 2;
    string used             = 3;
    string free             = 4;
    string percent          = 5;
  }
  repeated STORAGE storage  = 4;
}

message DATA {
  string fdition = 1;
}

message InitBasicResponse {
  int32 status          = 1;
  string message        = 2;
  DATA data             = 3;
  repeated string error = 4;
}

message Location {
  string lat   = 1;
  string long  = 2;
}

message PC {
  string id         = 1;
  string ip         = 2;
  string os         = 3;
  string gpu        = 4;
  string gpuDriver  = 5;
}

message SW {
  string ip         = 1;
  string name       = 2;
  string ver        = 3;
}

message CAMERA {
  string id         = 1;
  string ip         = 2;
  string model      = 3;
  string fw         = 4;
}

message SWITCH {
  string id         = 1;
  string ip         = 2;
  string brand      = 3;
  string model      = 4;
}

message InitBasicRequest {
  string nodeId          = 1;
  string type             = 2;
  string command          = 3;
  Location location       = 4;
  repeated PC pc          = 5;
  repeated SW sw          = 6;
  repeated CAMERA camera  = 7;
  repeated string gimbal  = 8;
  repeated SWITCH switch  = 9;
}
